# snake_bevy_wasm

./: Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md
.github/workflows/: rust_fmt_auto_build_test.yml
automation_tasks_rs/src/: build_wasm_mod.rs  main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/search.desc/snake_bevy_wasm/: snake_bevy_wasm-desc-0-.js
docs/snake_bevy_wasm/: all.html  constant.BOARD_CENTER.html  constant.BOARD_HEIGHT.html  constant.BOARD_WIDTH.html  constant.CANVAS_HEIGHT.html  constant.CANVAS_WIDTH.html  constant.OTHER_Z_LAYER.html  constant.SNAKE_Z_LAYER.html  constant.SPRITE_HEIGHT.html  constant.SPRITE_WIDTH.html  constant.STEP_DURATION.html  constant.VERSION.html  enum.AppState.html  enum.Direction.html  enum.Orientation.html  enum.SnakeDirection.html  fn.event_down.html  fn.event_left.html  fn.event_right.html  fn.event_up.html  fn.get_game_board_canvas.html  fn.handle_browser_resize.html  fn.landscape.html  fn.main.html  fn.portrait.html  fn.setup.html  fn.snake_move.html  fn.startup.html  index.html  sidebar-items.js  struct.AnimatedText.html  struct.Bird.html  struct.CustomMaterial.html  struct.DebugText.html  struct.FoodPosition.html  struct.GameBoardCanvas.html  struct.Position.html  struct.SnakeHead.html  struct.SnakeSegment.html
docs/snake_bevy_wasm/events_mod/: fn.handle_movement_input.html  index.html
docs/snake_bevy_wasm/game_logic_mod/: fn.check_dead.html  fn.eat_bird.html  fn.move_segments.html  fn.snake_head_move.html  index.html  sidebar-items.js
docs/snake_bevy_wasm/render_mod/: fn.render_bird.html  fn.render_dead.html  fn.render_debug_text.html  fn.render_segment.html  fn.render_snake_head.html  index.html  sidebar-items.js
docs/snake_bevy_wasm/state_dead_mod/: enum.ButtonEnum.html  fn.add_dead_to_app.html  fn.button_interaction_system.html  fn.handle_dead_ui_input.html  fn.on_enter_dead.html  fn.on_exit_dead.html  fn.rotate_bird.html  index.html  sidebar-items.js
docs/snake_bevy_wasm/state_in_game_mod/: constant.BIRD_Z_LAYER.html  constant.BOARD_CENTER.html  constant.BOARD_HEIGHT.html  constant.BOARD_WIDTH.html  constant.OTHER_Z_LAYER.html  constant.SNAKE_Z_LAYER.html  constant.SPRITE_HEIGHT.html  constant.SPRITE_WIDTH.html  constant.STEP_DURATION.html  enum.ButtonEnum.html  enum.Direction.html  fn.add_in_game_to_app.html  fn.on_enter_in_game.html  fn.on_exit_in_game.html  index.html  sidebar-items.js  struct.AnimatedText.html  struct.Bird.html  struct.DebugText.html  struct.InstanceHandle.html  struct.Music.html  struct.PointsText.html  struct.Position.html  struct.SnakeHead.html  struct.SnakeSegment.html  struct.SnakeSegmentIndex.html
docs/snake_bevy_wasm/state_in_game_mod/state_in_game_events_mod/: fn.button_interaction_system.html  fn.handle_movement_input.html  index.html  sidebar-items.js
docs/snake_bevy_wasm/state_in_game_mod/state_in_game_logic_mod/: constant.BIRD_COLORS.html  fn.check_dead.html  fn.eat_bird.html  fn.move_segments.html  fn.move_snake_head.html  index.html  sidebar-items.js
docs/snake_bevy_wasm/state_in_game_mod/state_in_game_render_mod/: fn.render_bird.html  fn.render_debug_text.html  fn.render_points_text.html  fn.render_segment.html  fn.render_snake_head.html  fn.rotate_segment.html  index.html  sidebar-items.js
docs/snake_bevy_wasm/state_main_menu_mod/: enum.ButtonEnum.html  fn.add_main_menu_to_app.html  fn.button_interaction_system.html  fn.handle_main_menu_ui_input.html  fn.on_enter_main_menu.html  fn.on_exit_dead.html  index.html  sidebar-items.js
docs/snake_bevy_wasm/web_sys_mod/: fn.add_listener_to_button.html  fn.debug_write.html  fn.get_client_height.html  fn.get_client_width.html  fn.get_device_pixel_ratio.html  fn.get_element_by_id.html  fn.get_html_element_by_id.html  fn.get_input_element_value_string_by_id.html  fn.open_url_in_new_tab.html  fn.set_html_element_inner_html.html  fn.set_html_element_inner_text.html  fn.window.html  index.html  sidebar-items.js
docs/src/snake_bevy_wasm/: events_mod.rs.html  game_logic_mod.rs.html  lib.rs.html  render_mod.rs.html  state_dead_mod.rs.html  state_in_game_mod.rs.html  state_main_menu_mod.rs.html  web_sys_mod.rs.html
docs/trait.impl/bevy_asset/: trait.Asset.js  trait.VisitAssetDependencies.js
docs/trait.impl/bevy_ecs/component/: trait.Component.js
publish_script/: snake_bevy_wasm_publish.sh
src/: events_mod.rs  game_logic_mod.rs  lib.rs  state_dead_mod.rs  state_in_game_mod.rs  state_main_menu_mod.rs  web_sys_mod.rs
src/state_in_game_mod/: state_in_game_events_mod.rs  state_in_game_logic_mod.rs  state_in_game_render_mod.rs
web_server_folder/snake_bevy/: index.html
web_server_folder/snake_bevy_wasm/: index.html  manifest.json  service_worker.js  test.html
web_server_folder/snake_bevy_wasm/assets/: custom_material.wgsl  sound_auto_play.js
web_server_folder/snake_bevy_wasm/css/: basic_style.css
(+23 files in other folders)
